<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kralleforpresident.icescraper.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#6666cc">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/gridLayout">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/citybox"
            android:layout_row="0"
            android:layout_column="0"
            android:inputType="text"
            android:backgroundTint="#000"
            android:hint="@string/city_hint" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/GPS_text"
            android:id="@+id/GPS_text"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:background="#ff0900" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temperature_text"
            android:id="@+id/temp_text"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/humidity_text"
            android:id="@+id/hum_text"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/temp_value"
            android:layout_row="0"
            android:layout_column="4"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hum_value"
            android:layout_row="1"
            android:layout_column="4"
            android:text="" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:id="@+id/search_button"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:background="@drawable/ic_search_black_48dp"
            android:contentDescription="searchbutton" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/gps_button"
            android:layout_row="0"
            android:layout_column="7"
            android:layout_rowSpan="2"
            android:background="@drawable/ic_gps_fixed_black_48dp"
            android:contentDescription="gps_button"
            android:layout_gravity="top" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3">

        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/gridLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
    </LinearLayout>



    <GridLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:id="@+id/gridLayout3">

        <TextView
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_text"
            android:id="@+id/main_text"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:textSize="35dp" />

    </GridLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_icon"
        android:contentDescription="snow"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:src="@drawable/thinking" />


</RelativeLayout>


